--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,50 +1,26 @@
 Package: eegUtils
 Type: Package
-Title: A collection of utilities for EEG analysis 
+Title: A collection of utilities for EEG analysis
 Version: 0.3.0.9000
 Date: 2018-11-22
-Authors@R: c(
-  person("Matt", "Craddock", role = c("aut", "cre"), email = "matt@mattcraddock.com"),
-  person("Matti", "Vuorre", role = "ctb", email = "mv2521@columbia.edu"))
+Authors@R: c( person("Matt", "Craddock", role = c("aut", "cre"), email
+        = "matt@mattcraddock.com"), person("Matti", "Vuorre", role =
+        "ctb", email = "mv2521@columbia.edu"))
 Maintainer: Matt Craddock <matt@mattcraddock.com>
-Description: A collection of functions for basic EEG processing. Includes import
-  functions for Biosemi (BDF) and Neuroscan (CNT), topographical plotting, referencing, and epoching.
+Description: A collection of functions for basic EEG processing.
+        Includes import functions for Biosemi (BDF) and Neuroscan
+        (CNT), topographical plotting, referencing, and epoching.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports:
-  ggplot2,
-  dplyr,
-  scales,
-  mgcv,
-  purrr,
-  shiny,
-  tidyr,
-  miniUI,
-  rlang,
-  MASS,
-  Matrix,
-  edfReader,
-  signal,
-  tibble,
-  stats,
-  matrixStats,
-  R.matlab,
-  viridis,
-  pracma,
-  abind,
-  data.table
-Depends:
-  R (>= 2.10)
+Imports: ggplot2, dplyr, scales, mgcv, purrr, shiny, tidyr, miniUI,
+        rlang, MASS, Matrix, edfReader, signal, tibble, stats,
+        matrixStats, R.matlab, viridis, pracma, abind, data.table
+Depends: R (>= 2.10)
 RoxygenNote: 6.1.1
-Suggests: testthat,
-    vdiffr,
-    covr,
-    knitr,
-    rmarkdown,
-    ica,
-    plotly,
-    geigen
+Suggests: testthat, vdiffr, covr, knitr, rmarkdown, ica, plotly, geigen
 URL: https://github.com/craddm/eegUtils
 BugReports: https://github.com/craddm/eegUtils/issues
 VignetteBuilder: knitr
+Repository: Neuroconductor
+biocViews: 
