--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,18 @@ addons:
       - mesa-common-dev
       - libglu1-mesa-dev
       - devscripts
+      - libomp-dev
+      - libhdf5-serial-dev
+      - libhdf5-dev
 os:
   - linux
   - osx
 osx_image: xcode9.4
 services: xvfb
 r:
-  - 3.3
   - 3.4
   - 3.5
+  - 3.6
   - release
   - devel
 jobs:
@@ -49,8 +52,7 @@ before_install:
   - start_xvfb ;
   - export rver=`r_version`; echo $rver ;
   - x=`export_clang_cxx`; eval ${x}
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then no_open_mp ; brew install -v freetype ;
-    fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then no_open_mp ; fi
   - jags_install || true;
   - if `need_v8`; then v8_install || true; fi
   - dcmtk_install || true;
@@ -73,11 +75,15 @@ before_install:
   - if [[ "${PACKAGE_NAME}" == "dti" || "${PACKAGE_NAME}" == "qMRI" ]]; then gsl_install
     ; fi
   - if [[ "${PACKAGE_NAME}" == "ROpenCVLite" || "${PACKAGE_NAME}" == "Rvision" ||
-    "${PACKAGE_NAME}" == "rtapas" ]]; then shopt -s expand_aliases ; x=`Rscript -e
-    "cat(Sys.which('R'))"` ; echo "reset R" ; alias R="travis_wait 100 ${x}" ; fi
+    "${PACKAGE_NAME}" == "rtapas" || "${PACKAGE_NAME}" == "stapler" ]]; then shopt
+    -s expand_aliases ; x=`Rscript -e "cat(Sys.which('R'))"` ; echo "reset R" ; alias
+    R="travis_wait 100 ${x}" ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then if [ `need_hdf5` ]; then hdf5_install ;
+    fi fi
   - setup_python 3.6 false ;
   - install_python_requirements ;
-  - R CMD javareconf ;
+  - R CMD javareconf || true;
+  - sudo R CMD javareconf || true;
 after_success: dump_logs
 after_failure: dump_logs
 before_deploy:
@@ -106,4 +112,4 @@ after_deploy:
     && -z "${run_coverage}" ]]; then echo 'covr::coveralls(type = "all", quiet = FALSE)'
     > neuroc_covr.R ; travis_wait 100 Rscript neuroc_covr.R ; rm neuroc_covr.R ; fi
 
-# neuroc.deps commit id:d4f3864
+# neuroc.deps commit id:871f223
